<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/messagebox1">

    <TextView
        android:id="@+id/message_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/message_sender_name"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Notification.Title"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
         />

    <TextView
        android:id="@+id/message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_username"
        android:layout_marginTop="5dp"
        android:text="@string/message_sender_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/message_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message_text"
        android:text="@string/message_sender_date"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"/>
</RelativeLayout>